video/ome/ovenmediaengine.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ovenmediaengine
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ovenmediaengine
  template:
    metadata:
      labels:
        app: ovenmediaengine
    spec:
      terminationGracePeriodSeconds: 3
      containers:
      - name: ovenmediaengine
        image: docker.io/airensoft/ovenmediaengine:0.15.16
        # rtmp is the main port for OBS, srt also required for OBS
        # webrtc requires publish and turn
        ports:
        - name: rtmp
          containerPort: 1935
        - name: srt
          containerPort: 9999
          protocol: UDP
        - name: publish
          containerPort: 3333
        - name: turn
          containerPort: 3478
        - name: webrtc-10000
          containerPort: 10000
          protocol: UDP
        resources:
          requests:
            cpu: 0m
            memory: 100Mi
          limits:
            cpu: 1000m
            memory: 1Gi
        volumeMounts:
        - name: config
          mountPath: /opt/ovenmediaengine/bin/origin_conf/Server.xml
          subPath: ome-config.xml
      volumes:
      - name: config
        configMap:
          name: ome-config
