video/ome/publish.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: publish
spec:
  selector:
    app: ovenmediaengine
  ports:
  - name: http
    port: 3333
# - name: downstream-tls
#   port: 3334
