video/ome/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: signaling
  annotations:
    # nginx.ingress.kubernetes.io/whitelist-source-range: REPLACE_ME
    # set timeout to 10 hours
    nginx.ingress.kubernetes.io/proxy-read-timeout: '36000'
    nginx.ingress.kubernetes.io/proxy-send-timeout: '36000'
spec:
  ingressClassName: nginx
  tls:
  - secretName: REPLACE_ME
  rules:
  - host: REPLACE_ME
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: publish
            port:
              name: downstream
